Revert "update from upstream"

--- a/src/f90_bindings/torch_ftn.f90.templ
+++ b/src/f90_bindings/torch_ftn.f90.templ
@@ -103,8 +103,7 @@ module torch_ftn
 
     ! Exposed flags and constants
     integer, parameter :: module_use_device = TORCH_FTN_MODULE_USE_DEVICE
-    integer, parameter :: module_use_inference_mode = TORCH_FTN_MODULE_USE_INFERENCE_MODE
-    public module_use_device, module_use_inference_mode
+    public module_use_device
     
     private
 
